public the part of Artsdome

--- a/404.html
+++ b/404.html
@@ -57,13 +57,15 @@
   <ul>
   
   
-  <li><a href="/recents/">Recents</a></li>
-  
   <li><a href="/about/">About</a></li>
+  
+  <li><a href="/recents/">Recents</a></li>
   
   <li><a href="/tags/">Tags</a></li>
   
-  <li><a href="/categories/">Categories--</a></li>
+  <li><a href="/categories/">Categories</a></li>
+  
+  <li><a href="/categories/artsdome">Artsdome</a></li>
   
   
   </ul>
