--- a/about/index.html
+++ b/about/index.html
@@ -66,13 +66,15 @@
   <ul>
   
   
-  <li><a href="/recents/">Recents</a></li>
-  
   <li class="active"><a href="/about/">About</a></li>
+  
+  <li><a href="/recents/">Recents</a></li>
   
   <li><a href="/tags/">Tags</a></li>
   
-  <li><a href="/categories/">Categories--</a></li>
+  <li><a href="/categories/">Categories</a></li>
+  
+  <li><a href="/categories/artsdome">Artsdome</a></li>
   
   
   </ul>
