--- a/recents/index.html
+++ b/recents/index.html
@@ -73,9 +73,11 @@
   
   <li><a href="/tags/">Tags</a></li>
   
-  <li><a href="/categories/">Categories</a></li>
+  <li><a href="/categories/">Categories </a></li>
   
   <li><a href="/categories/artsdome">Artsdome</a></li>
+  
+  <li><a href="/categories/talkthought">Talk&amp;Thought</a></li>
   
   
   </ul>
