--- a/recents/index.html
+++ b/recents/index.html
@@ -25,11 +25,15 @@
       <meta property="description" content="成为更好程序员的办法:
 源地址
 每周做四件事： 1，读学术论文； 2，学一个新工具； 3，读几个章节的书； 4，编程的时候屏幕录像，然后回放录像，找出自己写程序过程中做得不好的地方，以后加以改进 运动员、游戏玩家等会去看比赛录像，研究自己、研究对手。  做产品的担忧和执着
-">
+[&amp;hellip;] 自己的性格弱点:
+[&amp;hellip;] 挖掘漫画 和 电影的故事
+[&amp;hellip;] 漫画作者们 - &amp;hellip;">
       <meta property="og:description" content="成为更好程序员的办法:
 源地址
 每周做四件事： 1，读学术论文； 2，学一个新工具； 3，读几个章节的书； 4，编程的时候屏幕录像，然后回放录像，找出自己写程序过程中做得不好的地方，以后加以改进 运动员、游戏玩家等会去看比赛录像，研究自己、研究对手。  做产品的担忧和执着
-">
+[&amp;hellip;] 自己的性格弱点:
+[&amp;hellip;] 挖掘漫画 和 电影的故事
+[&amp;hellip;] 漫画作者们 - &amp;hellip;">
       
     
 
@@ -131,6 +135,43 @@
 </code></pre></li>
 
 <li><p>做产品的担忧和执着</p></li>
+
+<li><p>自己的性格弱点:</p>
+
+<ul>
+<li>不真诚:对自己 对他人 都很难做到真诚,尤其是对亲密的人</li>
+<li>不勇敢:往往没有勇气踏出那几步</li>
+</ul></li>
+
+<li><p>挖掘漫画 和 电影的故事</p>
+
+<ul>
+<li>找到作者和作品 的 另一面</li>
+</ul></li>
+
+<li><p>漫画作者们 - From <a href="https://space.bilibili.com/5636493/#/channel/detail?cid=19277">蓝得说</a></p>
+
+<ul>
+<li>安达充
+
+<ul>
+<li>青春 梦想 爱情 和 努力 友情 胜利 的对比</li>
+</ul></li>
+<li>今敏
+
+<ul>
+<li>大友克洋</li>
+<li>梦</li>
+<li>平泽进</li>
+<li>妄想代理人</li>
+<li>opus</li>
+<li>梦侦探</li>
+</ul></li>
+<li>沙村广明:无限之住人</li>
+<li>井上雄彦:漫画的艺术 技 &amp; 艺 &amp; 道</li>
+<li>荒川弘:厚积薄发</li>
+<li>青春在哪里<br /></li>
+</ul></li>
 </ul>
 
 
