--- a/recents/index.html
+++ b/recents/index.html
@@ -186,6 +186,8 @@
 <li><p>影评:男人的魅力终归是他一生的阅历，是他注视你的眼神，是他心中掩藏不住的凌厉与孤独——<a href="https://www.zhihu.com/question/278648513/answer/449425315">宋雯婷</a></p></li>
 
 <li><p>青蛇:成人|成神|不如为妖</p></li>
+
+<li><p>问舰:有趣的科幻电影评析</p></li>
 </ul>
 
 
@@ -208,7 +210,7 @@
 
   
   <hr>
-  <div class="copyright">记录每天琐碎的火花</div>
+  <div class="copyright">大把时间迷茫 几个瞬间成长</div>
   
   </footer>
   </article>
