update some things

--- a/recents/index.html
+++ b/recents/index.html
@@ -200,6 +200,30 @@
 <li><p>工作以来对创业\做人\处事的新认识</p></li>
 
 <li><p>喜剧的内核是悲剧:谈谈&lt;&lt;黑社会的超能力女儿&gt;&gt;</p></li>
+
+<li><p>产品经理方向</p>
+
+<ul>
+<li>是不是要搞一套读物 或是互联网学习产品</li>
+</ul></li>
+
+<li><p>陀思妥耶夫斯基 &amp; 托尔斯泰</p>
+
+<ul>
+<li>是不是要买全集</li>
+</ul></li>
+
+<li><p>要吹爆的两个公司:JetBrain 和 Omni</p>
+
+<ul>
+<li>全家桶真tm太良心了!!!</li>
+</ul></li>
+
+<li><p>反派影评|张瑞|电影爆博士</p>
+
+<ul>
+<li>这个关系也是够啊哈了</li>
+</ul></li>
 </ul>
 
 
