upload all the skr

--- a/recents/index.html
+++ b/recents/index.html
@@ -228,6 +228,19 @@
 <li><p>幽灵公主:人与自然</p></li>
 
 <li><p>机器战警:资本主导的世界的另一幅模样:都改变了人</p></li>
+
+<li><p>詹姆斯-卡梅隆的科幻故事</p></li>
+
+<li><p>新的集成式语言:Julia(Integrated with R Python C++)</p></li>
+
+<li><p>李健:如何远离诱惑的魔障</p></li>
+
+<li><p>乔纳森·布洛:新的游戏语言 和 这个魔性的人</p>
+
+<ul>
+<li>记得重听他的几期电台</li>
+<li>还有魔力牛也要重听得把</li>
+</ul></li>
 </ul>
 
 
