--- a/recents/index.html
+++ b/recents/index.html
@@ -81,6 +81,8 @@
   
   <li><a href="/categories/">Categories </a></li>
   
+  <li><a href="/categories/unityskill">UnitySkill</a></li>
+  
   <li><a href="/categories/artsdome">Artsdome</a></li>
   
   <li><a href="/categories/talkthought">Talk&amp;Thought</a></li>
@@ -241,6 +243,8 @@
 <li>记得重听他的几期电台</li>
 <li>还有魔力牛也要重听得把</li>
 </ul></li>
+
+<li><p>不忘初心:为第九艺术奉献一生</p></li>
 </ul>
 
 
