Configure all the easythings

--- a/recents/index.html
+++ b/recents/index.html
@@ -245,6 +245,14 @@
 </ul></li>
 
 <li><p>不忘初心:为第九艺术奉献一生</p></li>
+
+<li><p>为什么日本那么多棒球题材:国球当少年 青春|努力|奋斗|胜利|无限希望和憧憬:圆梦和遗憾都是青春的组成部分</p></li>
+
+<li><p>角度决定高低 姿势决定喜好</p></li>
+
+<li><p>从<a href="https://www.bilibili.com/video/av29815841/?spm_id_from=333.334.chief_recommend.19">依然小智对水户洋平的理解</a>我发现了走向成熟去理解角色的角度:环境 目的 出身 教育|他和我目前的理解角度很相似,但是我还没有达到他那个水平,我还是出于悲观和客观多一些,但是主观和能动等等东西我也是需要尽力去把握的</p></li>
+
+<li><p>感受到了职业的互联网产品经理的风范:虽然这件事上他可能是错的,是被嘲笑被无视被质疑的,但是他的态度,方式,角度,尤其是经验是我们这个团队没有的,所以学习是必要的,是重要的,(如果你不去学习)是致命的.</p></li>
 </ul>
 
 
