--- a/recents/index.html
+++ b/recents/index.html
@@ -87,6 +87,8 @@
   
   <li><a href="/categories/talkthought">Talk&amp;Thought</a></li>
   
+  <li><a href="/categories/to-be-continued">To Be Continued</a></li>
+  
   
   </ul>
 </nav>
@@ -253,6 +255,15 @@
 <li><p>从<a href="https://www.bilibili.com/video/av29815841/?spm_id_from=333.334.chief_recommend.19">依然小智对水户洋平的理解</a>我发现了走向成熟去理解角色的角度:环境 目的 出身 教育|他和我目前的理解角度很相似,但是我还没有达到他那个水平,我还是出于悲观和客观多一些,但是主观和能动等等东西我也是需要尽力去把握的</p></li>
 
 <li><p>感受到了职业的互联网产品经理的风范:虽然这件事上他可能是错的,是被嘲笑被无视被质疑的,但是他的态度,方式,角度,尤其是经验是我们这个团队没有的,所以学习是必要的,是重要的,(如果你不去学习)是致命的.</p></li>
+
+<li><p>C.S.Lewis:美国鲁迅 必要时了解一下</p></li>
+
+<li><p>&ldquo;以人之渺小，所有的时间都是浪费，但你要为自己浪费的时光赋值。&rdquo; -</p>
+
+<ul>
+<li>于淼</li>
+<li>中科院环境科学博士，目前海外漂泊，业余跨学科理论搬运工 博客 <a href="https://yufree.cn">https://yufree.cn</a></li>
+</ul></li>
 </ul>
 
 
