- 调整了多少东西我都他妈不记得了

--- a/recents/index.html
+++ b/recents/index.html
@@ -75,11 +75,19 @@
   
   <li><a href="/about/">About</a></li>
   
+  <li><a href="/booklist/">BookList</a></li>
+  
+  <li><a href="/movielist/">MovieList</a></li>
+  
+  <li><a href="/vocabulary/">Vocabulary</a></li>
+  
   <li class="active"><a href="/recents/">Recents</a></li>
   
   <li><a href="/tags/">Tags</a></li>
   
   <li><a href="/categories/">Categories </a></li>
+  
+  <li><a href="/categories/generalskill">GeneralSkill</a></li>
   
   <li><a href="/categories/unityskill">UnitySkill</a></li>
   
@@ -264,6 +272,56 @@
 <li>于淼</li>
 <li>中科院环境科学博士，目前海外漂泊，业余跨学科理论搬运工 博客 <a href="https://yufree.cn">https://yufree.cn</a></li>
 </ul></li>
+
+<li><p>[之后独立成章]Udacity的记录</p>
+
+<ul>
+<li>CS101
+
+<ul>
+<li>搜索引擎:从一个网站开始(作为种子)查找这个网页上的所有链接,并继续查找这些链接网页上的所有链接</li>
+<li>[冷知识] A modern computer can execute 12 quadrillion instructions in a seven week period.</li>
+<li>为什么不用自然语言(English Mandarin)编写程序
+
+<ul>
+<li>四舍五入的究极办法:给一个数+0.5后取整数位 : 真牛逼!!!
+<br /></li>
+</ul></li>
+</ul></li>
+</ul></li>
+
+<li><ul>
+<li>女性程序员对整个程序世界的贡献</li>
+</ul></li>
+
+<li><p>阮一峰:有很多很多角度可以解读的伟大程序员</p>
+
+<ul>
+<li>文集
+
+<ul>
+<li>&ldquo;更深层次来说，技术是冰冷和没有人性的，技术越是主导人类社会的发展方向，就越需要人性作为平衡和纠正。技术正在很多方面胜过人类，而人性作为一种竞争优势，因而变得更明显了。&rdquo;</li>
+<li>&ldquo;我现在的认识是，社交需求是一个极大的市场，网络社交才刚刚起步，潜力无限，现有软件根本没有很好地满足这些需求。收费的聊天群，只是一个非常初级的应用，各方面都还很简陋。将来付费的网络社交将是常态，那些高质量社交群的会员费，一定是很贵的。&rdquo;</li>
+<li>&ldquo;一旦人与人在生理上不平等，那么社会就将大变。这跟以前政治经济的不平等，有着本质的区别。人类将是历史上第一种生物，能够自己在内部创造出生物学意义上更高等的种类。可以想象，经过几代人的基因编辑的累积，底层的人们将全面落后于上层社会，毫无翻身的希望，等待他们的又会是什么命运呢？&rdquo;</li>
+<li>&ldquo;从小，我受到的教育是“明天会更好”。现在我明白了，这句话是有条件的。正常情况下，明天其实会更糟，因为熵在累积，只有不断注入新的能量处理熵，明天才会更好。&rdquo;</li>
+<li>&ldquo;物理学告诉我们，没有办法消除熵和混乱，我们只是让某些局部变得更有秩序，把混乱转移到另一些领域。&rdquo;</li>
+<li>&ldquo;长期来看，政治和经济都不太重要，影响不了趋势，真正起决定性作用的是技术。政治和经济只能改变资源的分配和价格，只有技术才能创造出新东西。政治和经济只能使人类在平面上移动，只有技术才能使得人类向上提升，进入下一个阶段。&rdquo;</li>
+<li>&ldquo;表面上，每个人都在强调自己有独立的人格，但是实际上，只要与他人稍稍有所不同，我们就会怕得要死，时刻都在提醒自己，一定要装得与其他人一致。&rdquo;</li>
+<li>&ldquo;阳光在树林中静静的倾泻，诱惑着你说放弃。可是不能，期待似乎是人与生俱来的天性，哪怕是虚无的，心灵也会不由自主的向它投靠，真正的绝望其实是很难的。&rdquo;</li>
+<li>&rdquo;&hellip;生活的出路还是在现实中，但又高于现实，寻找这种出路本身就构成了生活的意义。寻找离不开勇气，而勇气又来自纯洁的理想。一个人如果在这些大的原则下度过自己的一生，那他的生命就不会虚度。&rdquo;</li>
+<li>&ldquo;记住，重要的是思想，不是某个个人。人是会失败的，他会被抓、被杀、被忘记。但是，思想不会。你无法亲吻一种思想，无法触摸它、无法抓牢它。思想不会流血、不会感到痛苦，不会有爱憎。我亲眼目睹过思想的威力。我见过有人以思想的名义进行杀戮，有人为了捍卫思想而死。但是，400年后，思想依然能够改变世界。&rdquo; from V字仇杀队</li>
+<li>&ldquo;死亡的意义在于它告诉我们应该如何活着。&rdquo; from 托马斯·林奇《殡葬人手记》</li>
+</ul></li>
+<li>技术分享</li>
+</ul></li>
+
+<li><p>勇气:我最缺失的品质</p></li>
+
+<li><p>宋鴻兵:视频节目&lt;&lt;宏观&gt;&gt;&lt;&lt;潜流&gt;&gt;</p></li>
+
+<li><p>罗振宇:视频节目&lt;&lt;知识就是力量&gt;&gt;</p></li>
+
+<li><p>整理节奏游戏玩法 &amp; 类型</p></li>
 </ul>
 
 
