--- a/about/index.html
+++ b/about/index.html
@@ -60,11 +60,19 @@
   
   <li class="active"><a href="/about/">About</a></li>
   
+  <li><a href="/booklist/">BookList</a></li>
+  
+  <li><a href="/movielist/">MovieList</a></li>
+  
+  <li><a href="/vocabulary/">Vocabulary</a></li>
+  
   <li><a href="/recents/">Recents</a></li>
   
   <li><a href="/tags/">Tags</a></li>
   
   <li><a href="/categories/">Categories </a></li>
+  
+  <li><a href="/categories/generalskill">GeneralSkill</a></li>
   
   <li><a href="/categories/unityskill">UnitySkill</a></li>
   
