update 3 about LuoZhenYu

--- a/recents/index.html
+++ b/recents/index.html
@@ -322,6 +322,8 @@
 <li><p>罗振宇:视频节目&lt;&lt;知识就是力量&gt;&gt;</p></li>
 
 <li><p>整理节奏游戏玩法 &amp; 类型</p></li>
+
+<li><p>结合牛哥说的:让专业的人做 让LB负责调试到底 谈谈Tell Don&rsquo;t Ask的这个事情</p></li>
 </ul>
 
 
