--- a/vocabulary/index.html
+++ b/vocabulary/index.html
@@ -129,6 +129,11 @@
     - analogy      (n. 类比；类推；类似)  [to draw a analogy]
     - analog       (n. [自] 模拟；类似物) [analog circuit 模拟电路]
     - exceptions   (n. 异常)
+- 日常
+    - stagnant (adj. 停滞的；不景气的；污浊的；迟钝的)
+    - iterative (adj. [数] 迭代的；重复的，反复的)
+    - iterate (vt. 迭代；重复；反复说；重做)
+    - literate (adj. 受过教育的；精通文学的)
 
 
 </code></pre>
