update the Productor‘s best innovation

--- a/vocabulary/index.html
+++ b/vocabulary/index.html
@@ -134,8 +134,61 @@
     - iterative (adj. [数] 迭代的；重复的，反复的)
     - iterate (vt. 迭代；重复；反复说；重做)
     - literate (adj. 受过教育的；精通文学的)
+    - monotonous (adj. 单调的，无抑扬顿挫的；无变化的)
 
-
+- 无老师
+    - adjacent (adj. 邻近的，毗连的) = nearby = near to
+    - adjoin (vi. 毗连，邻接) = border (vt. 接近；与…接壤；在…上镶边)
+    - advantageous (adj. 有利的；有益的) = favourable (adj. 有利的，顺利的；赞成的)
+    - advent (n. 到来；出现；基督降临；基督降临节) = arrival
+    - afford (vt. 给予，提供；买得起) = produce (vt. 生产；引起；创作；生育，繁殖)
+    - aftermath of = the situation caused by (由...导致)
+    - aggregation (n. [地质][数] 聚合，聚集；聚集体，集合体) = collection = accumulation
+    - akin to = similar to 同类 近似    
+    - allege = suppose 宣称
+    - allegedly = supportedly (据说)
+    - allow for = make possible (使之发生 使之成为可能)
+    - altogether = fully adv. 充分地;完全地
+    - quaternion (n. 四元数；四个一组；四人一组)
+    - implicitly adv.
+    - explicitly
+    ------------ from 智课
+    - 背单词:物质层面 | 精神层面
+    - 频率问题: 从少量多次 -&gt; 多量多次 一次致死量 一天300-500
+                孟氏等差数列曲线方法 : 注意拐点 第二天 隔一天 隔两天 隔三天 隔四天 隔五天最后一遍 复习
+                工具书 : 韦氏字典 (狗皮膏药 美国人的新华字典) 抓住一本不放弃
+    - 手段问题:  一个中心:重复        
+                两个基本点:一次性记忆特征足够明显的单词 
+                海陆空多媒体轰炸(电视 老师 海报)
+                
+                1.词汇分类(词根按照学科分类)
+                2.先进背单词方法(词根词缀 联想记忆 典故法 分类)
+                3.按照TOEFL iBT考试分类
+    - 心理层面:  长期坚持 优秀具备 精神鸦片
+    ------------
+    - jabber 结巴
+    - rifle  来复枪(物质层面) / 抢劫(精神层面)
+    - progress
+        - pro   gress 走
+        - ingress v. 进入            - in 里面
+        - egress  v. 出口            - e  外面
+        - regress v. 撤退            - r  重复 回
+        - digress v. 离题；走向岔道  - di dis 低级no 高级away:分开
+    - ponderous (adj. 笨重的；沉闷的；呆板的)
+    - narcissus (n. 自恋 水仙 那喀索斯)
+    - salamander(n. 火蜥蜴；蝾螈目动物；耐火的人；烤箱)
+    ------------ 到第8课记得继续
+    词汇: 可拆分 不可拆分
+    - 可拆分
+       - 按规则的
+       - 不按规则的
+          - legislate adj.理发的
+          - hatred    n. 憎恨；怨恨；敌意
+    - 不可拆分 
+       - 各种方法 
+      pad 
+      chlorine 氯  
+      gin 杜松子酒 压面机
 </code></pre>
 
 
