- update many blogs

--- a/booklist/index.html
+++ b/booklist/index.html
@@ -124,6 +124,10 @@ The Death of &amp;hellip;">
 
 <h3 id="创业">创业</h3>
 
+<h3 id="产品">产品</h3>
+
+<h3 id="游戏">游戏</h3>
+
 <h3 id="设计">设计</h3>
 
 <p>the design of everyday things - Don Norman rec_by王垠</p>
@@ -156,7 +160,8 @@ And check out Jim Rickards: “Currency Wars Simulation”</p>
 
 <h3 id="文学">文学</h3>
 
-<p>致维克多·雨果的1001封情书<br />
+<p>人类群星闪耀之时<br />
+致维克多·雨果的1001封情书<br />
 彼得·卡门青德<br />
 树上的男爵<br />
 殡葬人手记<br />
