--- a/vocabulary/index.html
+++ b/vocabulary/index.html
@@ -150,8 +150,9 @@
     - allow for = make possible (使之发生 使之成为可能)
     - altogether = fully adv. 充分地;完全地
     - quaternion (n. 四元数；四个一组；四人一组)
-    - implicitly adv.
-    - explicitly
+    - implicitly (adv. 含蓄地；暗中地)
+    - explicitly (adv. 明确地；明白地)
+    - reminiscent (adj. 怀旧的，让人联想的,回忆往事的)
     ------------ from 智课
     - 背单词:物质层面 | 精神层面
     - 频率问题: 从少量多次 -&gt; 多量多次 一次致死量 一天300-500
