--- a/recents/index.html
+++ b/recents/index.html
@@ -324,6 +324,10 @@
 <li><p>整理节奏游戏玩法 &amp; 类型</p></li>
 
 <li><p>结合牛哥说的:让专业的人做 让LB负责调试到底 谈谈Tell Don&rsquo;t Ask的这个事情</p></li>
+
+<li><p>游戏大师展 : GameCores &amp; 央美</p></li>
+
+<li><p>数学的抽象思想 : 递归 和 分解</p></li>
 </ul>
 
 
