一个严肃作家会用毕生来挖掘他的年轻时代

--- a/recents/index.html
+++ b/recents/index.html
@@ -328,6 +328,8 @@
 <li><p>游戏大师展 : GameCores &amp; 央美</p></li>
 
 <li><p>数学的抽象思想 : 递归 和 分解</p></li>
+
+<li><p>一个严肃作家会用毕生来挖掘他的年轻时代</p></li>
 </ul>
 
 
