--- a/vocabulary/index.html
+++ b/vocabulary/index.html
@@ -162,6 +162,9 @@
     - convergence 收敛
     - divergence  发散
     - stopwatch   秒表
+_ 读论文180925
+    - posit (vt. 安置；假定)
+    - multinomial distribution 多项分布
 - from 智课
     - 背单词:物质层面 | 精神层面
     - 频率问题: 从少量多次 -&gt; 多量多次 一次致死量 一天300-500
