some undone subs

--- a/vocabulary/index.html
+++ b/vocabulary/index.html
@@ -192,6 +192,7 @@ _ 读论文180925
     - ponderous (adj. 笨重的；沉闷的；呆板的)
     - narcissus (n. 自恋 水仙 那喀索斯)
     - salamander(n. 火蜥蜴；蝾螈目动物；耐火的人；烤箱)
+    - detachment(n. 分离，拆开；超然；分遣；分遣队)
     
     ------------ 到第8课记得继续
     词汇: 可拆分 不可拆分
