--- a/vocabulary/index.html
+++ b/vocabulary/index.html
@@ -162,6 +162,7 @@
     - convergence 收敛
     - divergence  发散
     - stopwatch   秒表
+    - Disclaimer  (n. 不承诺，免责声明；放弃，拒绝)
 _ 读论文180925
     - posit (vt. 安置；假定)
     - multinomial distribution 多项分布
