update the first section to do all the great things

--- a/about/index.html
+++ b/about/index.html
@@ -105,6 +105,17 @@
       </header>
 
 
+ 
+<script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+MathJax.Hub.Config({
+    tex2jax: {
+        displayMath: [['$$','$$'],["\\(","\\)"]],
+        inlineMath: [['\\[','\\]'], ['$','$']],
+    },
+});
+</script>
+ 
+
 
 <div align="center">
   <img id="春节祝福" src="/./about_files/春节祝福.png" alt="春节祝福" width="230px" />
