--- a/vocabulary/index.html
+++ b/vocabulary/index.html
@@ -107,6 +107,17 @@
       </header>
 
 
+ 
+<script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+MathJax.Hub.Config({
+    tex2jax: {
+        displayMath: [['$$','$$'],["\\(","\\)"]],
+        inlineMath: [['\\[','\\]'], ['$','$']],
+    },
+});
+</script>
+ 
+
 
 <pre><code>- CS101
     - Ambiguity:歧义   (n. 含糊；不明确；暧昧；模棱两可的话) 
