--- a/vocabulary/index.html
+++ b/vocabulary/index.html
@@ -191,6 +191,7 @@
 _ 读论文180925
     - posit (vt. 安置；假定)
     - multinomial distribution 多项分布
+    - rigorous    (adj. 严格的，严厉的；严密的；严酷的)
 - from 智课
     - 背单词:物质层面 | 精神层面
     - 频率问题: 从少量多次 -&gt; 多量多次 一次致死量 一天300-500
