update the piano

--- a/recents/index.html
+++ b/recents/index.html
@@ -144,6 +144,12 @@
 <h3 id="不定期更新">不定期更新</h3>
 
 <ul>
+<li>基耶斯洛夫斯基
+
+<ul>
+<li>红 蓝 白</li>
+</ul></li>
+<li>普瑞斯纳</li>
 <li>丘比特的恶作剧 重评</li>
 <li>战神 分析
 
@@ -153,12 +159,6 @@
 <li>阴谋论</li>
 </ul></li>
 <li>李健和杰伦 - 我的少年和青年时代</li>
-<li>自己的性格弱点:
-
-<ul>
-<li>不真诚:对自己 对他人 都很难做到真诚,尤其是对亲密的人</li>
-<li>不勇敢:往往没有勇气踏出那几步</li>
-</ul></li>
 <li>挖掘漫画 和 电影的故事
 
 <ul>
